logo gaps and display fix

--- a/client/src/components/footer/footer.styles.sass
+++ b/client/src/components/footer/footer.styles.sass
@@ -7,11 +7,7 @@
 
     &__logo
         width: 150px
-        margin-left: 25px
-
-        @media (min-width: 450px) 
-            margin: 35px 0
-            
+        margin: 35px 0            
 
     &__container
         padding: 20px 40px
