--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -33,6 +33,7 @@ input::-webkit-calendar-picker-indicator
 .container
   margin: 0 auto
   width: vars.$containerWidth
+  padding: 0 15px
 
   @media (max-width:bp.$huge) 
     width: 85%
