--- a/client/src/routes/about/about.styles.sass
+++ b/client/src/routes/about/about.styles.sass
@@ -4,7 +4,7 @@
 .about
     position: relative
     width: 100%
-    height: calc( 100vh - vars.$navHeight )
+    min-height: calc( 100vh - vars.$navHeight )
     overflow: hidden
 
     &__title
