--- a/client/src/routes/navigation/navigation.styles.sass
+++ b/client/src/routes/navigation/navigation.styles.sass
@@ -9,6 +9,7 @@
     z-index: 1
     box-shadow: 0 2px 5px -3px rgba(0,0,0,0.5) 
     background-color: vars.$primary-color
+    gap: 10px
     @include mixins.flexDisplay($primarySetting: flex-start , $secondarySetting: center)
 
     &__logo
